--- a/index.html
+++ b/index.html
@@ -209,8 +209,7 @@
                     </figure>
                 </a>
             </div>
-
-            <a href="" type="button" class="btn btn-flat center wow fadeInUp mx-auto col-md-3">More works<span class="tag"></span></a>
+            <a href="" class="mx-auto" ><button type="button" class="btn btn-lg">More works</button></a>
         </div>
     </div>
 </section>
