31/7/2019 edits in team show

--- a/index.html
+++ b/index.html
@@ -214,7 +214,8 @@
     </div>
 </section>
 
-<!-- meet our team -->
+<!-- ----------------------- meet our team ------------------------- -->
+
 <section id="our-team" class="our-team text-center">
     <div class="container">
         <h3 class="wow fadeInUp">Meet Our Team</h3>
